# laba3-sem2

./: .gitignore  LICENSE.md  README.md  browser_results.txt  next.config.js  package-lock.json  package.json  results_optimized.txt  rezults.csv  script.js  tmp.txt
pages/: _app.js  index.js  index.tsx
public/: Laba3.js  manifest.json
public/scripts/: Laba3.js
public/wasm/: Laba3.js  Laba3.wasm  Laba3.worker.js
public/workers/: main.worker.js
scripts/: Laba3.js  Laba3.wasm
src/: ArraySequence.h  ArraySequence.hpp  BTree.h  BTree.hpp  CMakeLists.txt  Complex.h  Complex.hpp  Deque.h  DynamicArray.h  DynamicArray.hpp  Enumerable.h  Enumerable.hpp  Functions.h  Functions.hpp  ICollection.h  IEnumerable.h  IEnumerator.h  LinkedList.h  LinkedList.hpp  ListSequence.h  ListSequence.hpp  NAryTree.h  NAryTree.hpp  Pair.h  Pair.hpp  Person.h  Person.hpp  Sequence.h  Sequence.hpp  Set.h  Set.hpp  Stack.h  Stack.hpp  build-webassembly.sh  main.cpp
src/Tests/: ArraySequenceTests.cpp  BTreeTests.cpp  CMakeLists.txt  ComplexTests.cpp  DynamicArrayTests.cpp  EnumerableTests.cpp  LinkedListTests.cpp  ListSequenceTests.cpp  NAryTreeTests.cpp  SequenceTests.cpp  SetTests.cpp
src/public/: Laba3.wasm
wasm/: main.wasm
